# pdf-tool

./: .gitignore  README.md  pyproject.toml
pdf_tool/: __main__.py  main.py
pdf_tool/commands/: docs.py
