[tool.poetry]
name = "pdf-tool"
version = "0.1.0"
description = ""
authors = ["aidoskanapyanov <aidos.kanapyanov@alumni.nu.edu.kz>"]
readme = "README.md"
packages = [{include = "pdf_tool"}]

[tool.poetry.dependencies]
python = "^3.10"
ipdb = "^0.13.9"
ipython = "^8.7.0"
ipykernel = "^6.17.1"
black = "^22.10.0"
loguru = "^0.6.0"
typer = {extras = ["all"], version = "^0.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdf-tool = "pdf_tool.main:app"